--- a/index.html
+++ b/index.html
@@ -8,73 +8,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/style.css">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-        
+
 </head>
 
 <body>
-    <div id="container">
-        rting @ 1 min -->
-        <div id="display">1:00</div>
-        <!-- The buttons for starting, stoping & resting the game timer and questions-->
-        <div id="buttons">
-            <!--Start Button-->
-            <button id="start">Start</button>
-            <!--Stop Button-->
-            <button id="stop">Stop</button>
-            <!--Rest Button-->
-            <button id="reset">Reset</button>
-        </div>
-        <!-- The Trivia Questions -->
-        <div class="row" id="game-div">
-            <div class="col-12" id="quiz">
-                <!-- Question #1-->
-                <h4>1. "What is that biggest Mountain in Switzerland?</h4>
-
-                <input type="radio" name="q-1" value=incorrect>Dom
-                <input type="radio" name="q-1" value=incorrect>Lyskamm
-                <!-- CORRECT ANSWER BELOW -->
-                <input type="radio" name="q-1" value=correct>Monta Rosa
-                <input type="radio" name="q-1" value=incorrect>Matterhorn
-                <br>
-                <!-- Question #2-->
-                <h4>2. Which of the following is the largest Lake in Switzerland?</h4>
-
-                <input type="radio" name="q-2" value=incorrect>Lake Whales
-                <input type="radio" name="q-2" value=incorrect>Lake Matas
-                <input type="radio" name="q-2" value=incorrect>Lake Geneva
-                <!-- CORRECT ANSWER BELOW -->
-                <input type="radio" name="q-2" value=correct>Lake Tolsa
-                <br>
-                <!-- Question #3-->
-                <h4>3. Who many Miles east to west is Switzerland?</h4>
-
-                <input type="radio" name="q-2" value=incorrect>1020
-                <!-- CORRECT ANSWER BELOW -->
-                <input type="radio" name="q-2" value=correct>220
-                <input type="radio" name="q-2" value=incorrect>305
-                <input type="radio" name="q-2" value=incorrect>580
-                <br>
-                <!-- Question #5-->
-                <h4>4. What currency is used in Switzerland?</h4>
-
-                <input type="radio" name="q-2" value=incorrect>Euro
-                <!-- CORRECT ANSWER BELOW -->
-                <input type="radio" name="q-2" value=correct>Franc
-                <input type="radio" name="q-2" value=incorrect>Pound
-                <input type="radio" name="q-2" value=incorrect>Yen
-                <br>
-
-            </div>
-
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Switzerland Trivia Game</h1>
+            <p class="lead">How much do you think you know about the small but TaLLEST country in Europe?</p>
+            <p class="lead"> Now this is a timed Game! You have 60 seconds to answer 5 questions, and hit stop button before the timer runs
+                out
+            </p>
         </div>
     </div>
+    <!-- The buttons for starting, stoping & resting the game timer and questions-->
+    <div id="container">
+        <!--Start Button-->
+        <a class="btn btn-light btn-md" id="start-game" role="button">Start Here</a>
+        <!--Stop Timer Button-->
+        <a class="btn btn-dark btn-md" id="stop-game" role="button">Stop Timer</a>
+    </div>
+    <div class="container">
+        <div class="row" id="timer-div">
+            <div class="col-12" id="timer"></div>
+            <!-- The Trivia Questions -->
+            <div class="row" id="game-div">
+                <div class="col-12" id="quiz">
+                    <!-- Question #1-->
+                    <h4>1. "What is that biggest Mountain in Switzerland?</h4>
 
+                    <input type="radio" name="q-1" value=incorrect>Dom
+                    <input type="radio" name="q-1" value=incorrect>Lyskamm
+                    <!-- CORRECT ANSWER BELOW -->
+                    <input type="radio" name="q-1" value=correct>Monta Rosa
+                    <input type="radio" name="q-1" value=incorrect>Matterhorn
+                    <br>
+                    <!-- Question #2-->
+                    <h4>2. Which of the following is the largest Lake in Switzerland?</h4>
+
+                    <input type="radio" name="q-2" value=incorrect>Lake Whales
+                    <input type="radio" name="q-2" value=incorrect>Lake Matas
+                    <input type="radio" name="q-2" value=incorrect>Lake Geneva
+                    <!-- CORRECT ANSWER BELOW -->
+                    <input type="radio" name="q-2" value=correct>Lake Tolsa
+                    <br>
+                    <!-- Question #3-->
+                    <h4>3. Who many Miles east to west is Switzerland?</h4>
+
+                    <input type="radio" name="q-2" value=incorrect>1020
+                    <!-- CORRECT ANSWER BELOW -->
+                    <input type="radio" name="q-2" value=correct>220
+                    <input type="radio" name="q-2" value=incorrect>305
+                    <input type="radio" name="q-2" value=incorrect>580
+                    <br>
+                    <!-- Question #4-->
+                    <h4>4. What currency is used in Switzerland?</h4>
+
+                    <input type="radio" name="q-2" value=incorrect>Euro
+                    <!-- CORRECT ANSWER BELOW -->
+                    <input type="radio" name="q-2" value=correct>Franc
+                    <input type="radio" name="q-2" value=incorrect>Pound
+                    <input type="radio" name="q-2" value=incorrect>Yen
+                    <br>
+
+                    <!-- Question #5-->
+                    <h4>4. What are the colors on the Switzerland flag?</h4>
+
+                    <input type="radio" name="q-2" value=incorrect>Red and blue
+                    <!-- CORRECT ANSWER BELOW -->
+                    <input type="radio" name="q-2" value=correct>Red and white
+                    <input type="radio" name="q-2" value=incorrect>Green and Orange
+                    <input type="radio" name="q-2" value=incorrect>White and Yellow
+                    <br>
+                </div>
+
+            </div>
+        </div>
+        <div class="row" id="results-div">
+                <div class="col-6" id="results">
+                    <h4>How You Did:</h4>
+                    <h5 id="total-correct"></h5>
+                    <h5 id="total-incorrect"></h5>
+                    <h5 id="total-unanswered"></h5>
+                </div>
+            </div>
 
 
 
